--- a/configs/preprocess.yaml
+++ b/configs/preprocess.yaml
@@ -292,6 +292,16 @@ datasets:
     original_sampling_rate: 30  # Hz (元データ)
     # リサンプリング不要
 
+  hhar:
+    raw_data_path: data/raw
+    processed_data_path: data/processed
+    target_sampling_rate: 60
+    window_size: 60
+    stride: 12
+    max_gap_sec: 1.5
+    min_segment_sec:  0.98333333333 # = 59/60 #(window_size - 1) / target_sampling_rate
+
+
 # ロギング設定
 logging:
   level: INFO           # DEBUG, INFO, WARNING, ERROR
